--- a/Templates/index.html
+++ b/Templates/index.html
@@ -11,21 +11,38 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        background-color: #f3ec90;
       }
-      h1 {
+      h3 {
+        font-size: 1.8rem;
+        font-weight: bold;
         margin: 20px 0;
         text-align: center;
       }
-      img {
-        width: 700px;
+      video {
+        width: 500px;
+      }
+      canvas {
+        width: 300px;
+        height: 220px;
+        margin-top: 20px;
+      }
+      .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>Surface Defect Detection of Ceramic Tiles</h1>
-      <img src="{{url_for('video')}}" />
-      <h1>Color Dot</h1>
+      <h3>Surface Defect Detection of Ceramic Tiles</h3>
+      <video id="video" autoplay></video>
+      <canvas id="canvas"></canvas>
+      <h3 id="result">Result will be displayed here!</h3>
     </div>
+    <!-- Custom javascript -->
+    <script src="{{url_for('static', filename='scripts.js')}}" defer></script>
   </body>
 </html>
